--- a/emacs/treemacs.org
+++ b/emacs/treemacs.org
@@ -2,11 +2,8 @@
 
 A tree layout file explorer for Emacs.
 
-I don't need that, so ~:disabled~ at this moment.
-
  #+begin_src emacs-lisp
    (use-package treemacs
-    :disabled
     :init
         ;;
         ;; Mouse click to show action menu
@@ -77,7 +74,7 @@ I don't need that, so ~:disabled~ at this moment.
 
             ;; The default width and height of the icons is 22 pixels. If you are
             ;; using a Hi-DPI display, uncomment this to double the icon size.
-            ;;(treemacs-resize-icons 44)
+            (treemacs-resize-icons 44)
 
             (treemacs-follow-mode t)
             (treemacs-filewatch-mode t)
@@ -115,12 +112,12 @@ I don't need that, so ~:disabled~ at this moment.
             ;;
             ;; Allows you to use treemacs icons in dired buffers
             ;;
-            (treemacs-icons-dired-mode)
+            ;; (treemacs-icons-dired-mode)
 
             ;;
             ;; Provides a theme using all-the-icons.
             ;;
-            (treemacs-all-the-icons)
+            ;;(treemacs-all-the-icons)
         )
    )
 
@@ -131,12 +128,12 @@ I don't need that, so ~:disabled~ at this moment.
     :after (treemacs evil)
    )
 
+   (use-package treemacs-icons-dired
+    :hook (dired-mode . treemacs-icons-dired-enable-once)
+    :ensure t)
+
    ;; (use-package treemacs-projectile
    ;;   :after (treemacs projectile)
-   ;;   :ensure t)
-
-   ;; (use-package treemacs-icons-dired
-   ;;   :hook (dired-mode . treemacs-icons-dired-enable-once)
    ;;   :ensure t)
 
    ;; (use-package treemacs-magit
