--- a/personal/keymap.org
+++ b/personal/keymap.org
@@ -1,32 +1,41 @@
 * Keymap
 
-| Command         | Description                               |
-|-----------------+-------------------------------------------|
-| =leader i=        | open functions menu                       |
-|-----------------+-------------------------------------------|
-| =Ctr n=           | next error                                |
-| =Ctr p=           | prev error                                |
-| =leader s e=      | show errors                               |
-|-----------------+-------------------------------------------|
-| =b M= <=> =g b=     | bookmark and go back                      |
-|-----------------+-------------------------------------------|
-| =/= =,= =.=           | searching, prev searching, next searching |
-|-----------------+-------------------------------------------|
-| =K=               | show Docs                                 |
-| =leader k e=      | kill Docs                                 |
-|-----------------+-------------------------------------------|
-| =leader e=        | toggle file tree                          |
-|-----------------+-------------------------------------------|
-| =leader kk=       | open keymap                               |
-|-----------------+-------------------------------------------|
-| =ctr + m/i=       | move to left/right windows                |
-| =ctr w + n/e=     | move to left/right windows                |
-|-----------------+-------------------------------------------|
-| =leader + b=      | buffer                                    |
-| =leader + leader= | toggle buffer                             |
-|-----------------+-------------------------------------------|
-| =leader + l=      | key stroke                                |
-|-----------------+-------------------------------------------|
-| =Cmd + x=         | command mod pop                           |
-|-----------------+-------------------------------------------|
+1. tree and window shift
+2. tree copy and edit 
+| Command         | Description                                  |
+|-----------------+----------------------------------------------|
+| =leader i=        | open functions menu                          |
+|-----------------+----------------------------------------------|
+| =Ctr n=           | next error                                   |
+| =Ctr p=           | prev error                                   |
+| =leader s e=      | show errors                                  |
+|-----------------+----------------------------------------------|
+| =b M= <=> =g b=     | bookmark and go back                         |
+|-----------------+----------------------------------------------|
+| =/= =,= =.=           | searching, prev searching, next searching    |
+|-----------------+----------------------------------------------|
+| =K=               | show Docs                                    |
+| =leader k e=      | kill Docs                                    |
+|-----------------+----------------------------------------------|
+| =leader e=        | toggle file tree                             |
+|-----------------+----------------------------------------------|
+| =leader kk=       | open keymap                                  |
+|-----------------+----------------------------------------------|
+| =leader ss=       | open eshell                                  |
+|-----------------+----------------------------------------------|
+| =- ==             | increase/decrease window width/balance width |
+| =_ +=             | increase/decrease window height              |
+|-----------------+----------------------------------------------|
+| =ctr + m/i=       | move to left/right windows                   |
+| =ctr w + n/e=     | move to left/right windows                   |
+|-----------------+----------------------------------------------|
+| =leader + b=      | buffer                                       |
+| =leader + leader= | toggle buffer                                |
+|-----------------+----------------------------------------------|
+| =leader + l=      | key stroke                                   |
+|-----------------+----------------------------------------------|
+| =Cmd + x=         | command mod pop                              |
+|-----------------+----------------------------------------------|
+| =shift + tab=     | toggle all headings tab                      |
+|-----------------+----------------------------------------------|
 
