--- a/emacs/keybindings.org
+++ b/emacs/keybindings.org
@@ -484,14 +484,6 @@ By default, evil bind =C-z= to toggle between =evil-state= and =emacs-state=, bu
   ;; Bind to the local buffer keymap against the following delay modes
   ;;
   (defun my-bind-q-kill-current-window-local()
-    ;;
-    ;; Disable the 'SPC' binding first before binding local, otherwise,
-    ;; '<leader>' won't work correctly!!!
-    ;;
-    ;; (define-key dired-mode-map (kbd "SPC") nil)
-    ;; (define-key xref--xref-buffer-mode-map (kbd "SPC") nil)
-
-    (define-key dired-mode-map (kbd "SPC") nil)
     (define-key evil-normal-state-local-map (kbd "Q") 'delete-window)
   )
 
@@ -1471,6 +1463,22 @@ After going into the =wdired-change-to-wdired-mode=, here are the default keybin
      (my-dired-custom-go-to-local)
      (my-dired-toggle-hidden-files-local)
      (my-dired-toggle-read-only-local)
+
+     ;;
+     ;; Rebind all '<leader>' related to local buffer scope
+     ;; to solve the default 'SPC' binds to 'dired-next-line'!!!
+     ;;
+     (define-key evil-normal-state-local-map (kbd "SPC q") 'save-buffers-kill-terminal)
+     (define-key evil-normal-state-local-map (kbd "SPC df") 'helpful-callable)
+     (define-key evil-normal-state-local-map (kbd "SPC dv") 'helpful-variable)
+     (define-key evil-normal-state-local-map (kbd "SPC dk") 'describe-key)
+     (define-key evil-normal-state-local-map (kbd "SPC db") 'describe-bindings)
+     (define-key evil-normal-state-local-map (kbd "SPC dm") 'describe-mode)
+     (define-key evil-normal-state-local-map (kbd "SPC l") 'clm/toggle-command-log-buffer)
+     (define-key evil-normal-state-local-map (kbd "SPC p") 'find-file)
+     (define-key evil-normal-state-local-map (kbd "SPC b") 'consult-buffer)
+     (define-key evil-normal-state-local-map (kbd "SPC SPC") 'switch-to-last-buffer)
+     (define-key evil-normal-state-local-map (kbd "SPC vs") 'evil-window-vsplit)
   )
 
   (add-hook 'dired-mode-hook #'my-dired-customized-bindings)
