--- a/emacs/org_mode.org
+++ b/emacs/org_mode.org
@@ -18,10 +18,9 @@
 
   (use-package org-bullets
     :after org
+    :init
+        (setq org-bullets-bullet-list '("" "" ">" "●" "◆" "*"))
     :hook (org-mode . org-bullets-mode)
-    ;;:custom
-    ;;(org-bullets-bullet-list '(">"  ">>"  ">>>"  ">>>>"  ">>>>>"  ">>>>>>"  ">>>>>>>")))
-    ;; (add-hook 'org-mode-hook (lambda () (org-bullets-mode 1)))
   )
 
 #+END_SRC
